# wb_sppmon

./: .gitignore  LICENSE  LOGIC_ru.rst  MANIFEST.in  README.rst  production.ini.sample  pyproject.toml  requirements.txt
config/samples/: contacts_admins.lst.sample  contacts_users.lst.sample  monitor_articles.lst.sample  monitor_subcategories.lst.sample  product_categories.lst.sample  report_emails.lst.sample  wb_sppmon.ini.sample
wb_sppmon/: __init__.py  failure.py  helpers.py  idx_utils.py  params.py  settings.py  telegram.py  wb_sppmon.py  wildberries.py
wb_sppmon/models/: __init__.py  tcm.py  wb.py
